--- a/public/profile/package.json
+++ b/public/profile/package.json
@@ -10,11 +10,13 @@
     "formik": "^2.1.4",
     "http-proxy-middleware": "^1.0.3",
     "mobx": "5.6.0",
+    "mobx-react": "^6.1.8",
     "mobx-react-lite": "^1.5.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-hook-form": "^5.1.1",
     "react-images-upload": "^1.2.8",
+    "react-notify-toast": "^0.5.1",
     "react-scripts": "3.4.0",
     "react-spinners": "^0.8.1"
   },
